--- a/Svetosavlje/FrontEnd/views/header.html
+++ b/Svetosavlje/FrontEnd/views/header.html
@@ -1,26 +1,21 @@
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
-                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
-                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-                </a>
-                <div class="nav-collapse">
-                    <ul class="nav">
-                        <li id="home"><a href="xxx">Светосавље.орг</a></li>
-                        <li id="pastir"><a href="xxx">Питање пастиру</a></li>
-                        <li id="prolog"><a href="xxx">Пролог</a></li>
-                        <li id="molitve"><a href="xxx">Молитве</a></li>
-                        <li id="lista"><a href="http://www.svetosavlje.org/listarhiva/Home.aspx?page=0" target=_blank>Листа</a></li>
-                        <li id="biblioteka"><a href="xxx">Библиотека</a></li>
-                        <li><a href="http://blogs.svetosavlje.org/vesti/" target="_blank">Вести</a></li>
-                        <li><a href="http://www.svedokverni.org/" target="_blank">Мисија</a></li>
-                        <li id="pojanje"><a href="xxx">Појање</a></li>
-                        <li id="svetinje"><a href="xxx">Светиње</a></li>
-                        <li id="riznice"><a href="xxx">Ризнице</a></li>
-                        <li id="crkvenoslovenski"><a href="xxx">Црквенословенски језик</a></li>
-                    </ul>
-                </div>
-                <!--/.nav-collapse -->
-            </div>
-        </div>
+    <div class="contain-to-grid sticky">
+    <nav class="top-bar" data-topbar role="navigation">
+      <ul class="title-area">
+        <li class="name"><h1><a href="#">Svetosavlje.org</a></h1></li>
+        <li class="toggle-topbar menu-icon"><a href="#">Навигација</a></li>
+      </ul>
+
+        <section class="top-bar-section">         
+          <ul class="right">
+            <li><a href="#">Питање пастиру</a></li>
+            <li><a href="#">Пролог</a></li>
+            <li><a href="#">Молитве</a></li>
+            <li><a href="http://www.svetosavlje.org/listarhiva/Home.aspx?page=0">Листа</a></li>
+            <li><a href="#">Библиотека</a></li>
+            <li><a href="http://blogs.svetosavlje.org/vesti/">Вести</a></li>
+            <li><a href="http://www.svedokverni.org/">Мисија</a></li>
+          </ul>
+        </section>
+      </nav>
     </div>
+
