--- a/Svetosavlje/FrontEnd/views/footer.html
+++ b/Svetosavlje/FrontEnd/views/footer.html
@@ -1,1 +1,25 @@
-footer.html
+  <footer class="footer row">
+    <div class="small-12 medium-4 large-4 columns">
+      <a href="http://www.svetosavlje.org/"><img style="margin-bottom:1em;" src="images/logo.svg" alt="Svetosavlje.org naslovna strana" /></a>
+      <p class="summary">© 2003 Светосавље.орг, cва права задржана. <a href="http://www.svetosavlje.org/stats/awstats.pl">Статистика</a></p>
+    </div>
+    <div class="small-12 medium-4 large-4 columns">
+      <p class="summary">Светосавље је православно хришћанство српског стила и искуства. То је наш народни, српски, православно-хришћански опит. Опит, стил и искуство утемељени на Светитељу Сави, његовој личности и дјелу; његовој и његових светих наследника. <a href="http://www.svetosavlje.org/uvodnik.htm">Читај даље</a> »</p>
+    </div>
+    <div class="small-12 medium-4 large-4 columns">
+      <ul class="summary">
+        <li><a href="/index.php">Насловна</a></li>
+        <li><a href="/biblioteka/index.htm">Библиотека</a></li>
+        <li><a href="/molitve/index.php">Молитве</a></li>
+        <li><a href="/riznice/index.htm">Ризнице</a></li>
+        <li><a href="/pojanje/index.htm">Појање</a></li>
+        <li><a href="/svetinje/index.htm">Светиње</a></li>
+        <li><a href="/slovenski/index.htm">ЦрквеноСловенски језик</a></li>
+        <li><a href="/pastir/index.php">Питање пастиру</a></li>
+        <li><a href="http://blogs.svetosavlje.org/vesti/">Вести</a></li>
+        <li><a href="/lista/index.php">Листа</a></li>
+        <li><a href="../roditelji/uvodnik.html">Родитељска Листа</a></li>
+        <li><a href="http://www.svedokverni.org/">Мисија</a></li>
+      </ul>
+    </div>
+
