--- a/Svetosavlje/FrontEnd/views/header.html
+++ b/Svetosavlje/FrontEnd/views/header.html
@@ -1,21 +1,32 @@
-    <div class="contain-to-grid sticky">
-    <nav class="top-bar" data-topbar role="navigation">
-      <ul class="title-area">
-        <li class="name"><h1><a href="#">Svetosavlje.org</a></h1></li>
-        <li class="toggle-topbar menu-icon"><a href="#">Навигација</a></li>
-      </ul>
-
-        <section class="top-bar-section">         
-          <ul class="right">
-            <li><a href="#">Питање пастиру</a></li>
-            <li><a href="#">Пролог</a></li>
-            <li><a href="#">Молитве</a></li>
-            <li><a href="http://www.svetosavlje.org/listarhiva/Home.aspx?page=0">Листа</a></li>
-            <li><a href="#">Библиотека</a></li>
-            <li><a href="http://blogs.svetosavlje.org/vesti/">Вести</a></li>
-            <li><a href="http://www.svedokverni.org/">Мисија</a></li>
-          </ul>
-        </section>
-      </nav>
+<div class="header-wrap-small">
+  <div class="row">
+    <div class="large-8 medium-8 small-12 columns">
+      <img src="images/logo.svg" style="width:300px; height:100px; margin-top:2em;">
     </div>
+<!--     <div class="large-4 medium-4 small-12 columns">
+      <img src="images/header-biblioteka.svg" style="width:300px; height:100px; margin-top:2.5em;">
+    </div> -->
+  </div>
+</div>
+
+<div class="contain-to-grid sticky">
+  <nav class="top-bar" data-topbar role="navigation">
+    <ul class="title-area">
+      <li class="name"><h1><a href="#">Svetosavlje.org</a></h1></li>
+      <li class="toggle-topbar menu-icon"><a href="#">Навигација</a></li>
+    </ul>
+
+    <section class="top-bar-section">         
+      <ul class="right">
+        <li><a href="#">Питање пастиру</a></li>
+        <li><a href="#">Пролог</a></li>
+        <li><a href="#">Молитве</a></li>
+        <li><a href="http://www.svetosavlje.org/listarhiva/Home.aspx?page=0">Листа</a></li>
+        <li><a href="#">Библиотека</a></li>
+        <li><a href="http://blogs.svetosavlje.org/vesti/">Вести</a></li>
+        <li><a href="http://www.svedokverni.org/">Мисија</a></li>
+      </ul>
+    </section>
+  </nav>
+</div>
 
